adding dependency injection with tsyringe, implement spec migrations
