# src/swagger.json
@@ -72,9 +72,90 @@
           }
         }
       }
-    }
- }
+    },
+    "/categories/import":{
+      "post":{
+        "tags":["Category"],
+        "summary":"Import Categories from a file",
+        "description":"Import Categories from a file",
+        "requestBody":{
+          "content":{
+            "multipart/form-data":{
+              "schema":{
+                "type":"object",
+                "properties":{
+                   "file":{
+                     "type":"string",
+                     "format":"binary"
+                   }
 
+                }
+              }
+            }
+
+          }
+        },
+        "responses":{
+          "201":{
+            "description":"Created"
+          }
+        }
+
+      }  
+
+    },
+
+    "/specifications":{
+      "post":{
+        "tags":["Specifications"],
+        "summary":"Create a specification",
+        "description":"Create a specification",
+        "requestBody":{
+          "content":{
+            "application/json":{
+              "schema":{
+                "$ref":"#/definitions/specification"
+              }
+            }
+          }
+        },
+        "responses":{
+          "201":{
+            "description": "Created"
+          },
+          "500":{
+            "description": "Specification Already Exists!",
+            "content":{
+              "application/json": {
+                 "schema":{
+                   "type":"object",
+                   "properties":{
+                      "error":{
+                        "type":"string"
+                      }
+                   }
+                 }    
+              }
+            }
+          }
+        }
+      }
+    }
+ },
+"definitions":{
+    "specification":{
+      "type":"object",
+      "properties":{
+        "name":{
+          "type":"string"
+        },
+        "description":{
+          "type" : "string"
+      }
+    }
+
+ }
+}
 
 
 
